adding google cloud speech to text notebook

--- a/00_TEST_splice_mp3.ipynb
+++ b/00_TEST_splice_mp3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = AudioSegment.from_mp3(\"./Datasets/Sample/202005061138-383648-31120.mp3\")"
+    "# Our Audio File\n",
+    "file = AudioSegment.from_mp3(\"./Datasets/sample_audio/202005061138-383648-31120.mp3\")"
    ]
   },
   {
@@ -35,69 +36,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This function took 577.910285949707 seconds\n"
+      "This function took 714.945307970047 seconds\n"
      ]
     }
    ],
    "source": [
+    "# This will slice our audio file into segements of non-silence\n",
     "timestart = time.time()\n",
     "chunks = split_on_silence(file, silence_thresh = file.dBFS, min_silence_len= 4000)\n",
     "print(f\"This function took {time.time() - timestart} seconds\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<pydub.audio_segment.AudioSegment at 0x10e5248d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10e524090>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10e524790>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10d308110>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10d3083d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10d3023d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10d302110>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10e530190>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10e530d10>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10e5247d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x104664c90>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10d99fc50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x106066990>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x104e6c490>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10ec7a750>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10ec6cd50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425fd0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425e50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425650>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425c50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f4251d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f4256d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f4258d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425150>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425d50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f4257d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425550>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f4252d0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425ed0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425450>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425750>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425950>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425350>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425ad0>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425b50>,\n",
-       " <pydub.audio_segment.AudioSegment at 0x10f425850>]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chunks"
    ]
   },
   {
@@ -106,41 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This will save our segments into indivutal wav files\n",
     "total_time = 0\n",
     "counter = 1\n",
     "for chunk in chunks:\n",
     "    chunk.export(f\"./Datasets/Sample/sample{counter}.wav\", format = \"wav\")\n",
     "    counter += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'total_time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-9bec417112c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtotal_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'total_time' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "total_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#detect_silence(file[:200_000], silence_thresh = file.dBFS,)"
    ]
   }
  ],
