--- a/01_Audio_Download.ipynb
+++ b/01_Audio_Download.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:53:32.409802Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:52:52.106073Z",
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# MA State Police - Metro Boston Area\n",
-    "TEST_FEED_ID = \"26120\"  "
+    "TEST_FEED_ID = \"25818\"  "
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:52:52.808798Z",
@@ -148,14 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:52:53.660759Z",
      "start_time": "2020-05-09T16:52:53.653780Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This will download archived audio \n",
+      "starting at 2020-05-01 12:00:00 \n",
+      "ending at 2020-05-01 14:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "start_date = dt(2020,\n",
     "                5,\n",
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:52:55.025418Z",
@@ -200,7 +210,9 @@
    },
    "outputs": [],
    "source": [
-    "chromedriverpath = \"../../documents/webdriver/chromedriver.exe\""
+    "# chromedriverpath = \"../../documents/webdriver/chromedriver.exe\"\n",
+    "\n",
+    "chromedriverpath = \"/Users/alex/Documents/chromedriver\""
    ]
   },
   {
@@ -214,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:52:55.971177Z",
@@ -223,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "outputpath = \"./mp3_download\""
+    "outputpath = \"./Datasets/mp3_download/\""
    ]
   },
   {
@@ -249,14 +261,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:53:14.855711Z",
      "start_time": "2020-05-09T16:52:57.156832Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing calendar navigation for Boston Metro Area Police and Fire - West...\n",
+      "Initialization complete.\n",
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 25818\n",
+      "  Feed Name = Boston Metro Area Police and Fire - West\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/25818\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/25818\"\n",
+      "  Start Date: 2019-05-09\n",
+      "  End Date:   2020-05-09\n",
+      "  Username = \"codylocks\" Password = [True]\n",
+      "  0 built archive entries \n"
+     ]
+    }
+   ],
    "source": [
     "archive = BroadcastifyArchive(TEST_FEED_ID, \n",
     "                              login_cfg_path = None, \n",
@@ -274,14 +305,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:53:42.960437Z",
      "start_time": "2020-05-09T16:53:35.782288Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching webdriver...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f8fee1d9baa4ec4bb3d1e762637e551",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Building dates', layout=Layout(flex='2'), max=2, style=Progre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 25818\n",
+      "  Feed Name = Boston Metro Area Police and Fire - West\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/25818\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/25818\"\n",
+      "  Start Date: 2019-05-09\n",
+      "  End Date:   2020-05-09\n",
+      "  Username = \"codylocks\" Password = [True]\n",
+      "  85 built archive entries between 2020-05-01 and 2020-05-02\n"
+     ]
+    }
+   ],
    "source": [
     "archive.build(start = start_date,\n",
     "              end = end_date)"
@@ -296,15 +365,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-09T16:53:58.435756Z",
      "start_time": "2020-05-09T16:53:45.415115Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68ed65e0efe04c55b67658f26dc735a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Overall progress', layout=Layout(flex='2'), max=3, style=Prog…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Downloading 05-01-20 12:10 to 05-01-20 13:09\n",
+      "\r",
+      "Storing at ./Datasets/mp3_download/.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1537702d22374a10affa66dbe44b75fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 202005011209-287722-25818.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d4f4ef759e4449da1a11b8b21b75b17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 202005011140-705103-25818.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d0e8b3c11154bb498cb618456b4e7a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 202005011110-123863-25818.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "archive.download(start = start_time,\n",
     "             end = end_time,\n",
@@ -355,6 +498,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
