Renamed ttranscribe notebook to follow convention

--- a/03_transcribe_audio.ipynb
+++ b/03_transcribe_audio.ipynb
@@ -73,19 +73,19 @@
     "            # model parameters\n",
     "            config = speech.types.RecognitionConfig(\n",
     "                encoding=enums.RecognitionConfig.AudioEncoding.LINEAR16,\n",
-    "                sample_rate_hertz=22050,\n",
-    "                language_code='en-US',\n",
-    "                audio_channel_count=1,\n",
+    "                sample_rate_hertz = sound_file.frame_rate,\n",
+    "                language_code = 'en-US',\n",
+    "                audio_channel_count = sound_file.channels,\n",
     "                enable_separate_recognition_per_channel = True,\n",
     "                use_enhanced = True,\n",
     "                model = 'phone_call',\n",
-    "                speech_contexts= [{'boost': 20.0}])\n",
+    "                speech_contexts = [{'boost': 20.0}])\n",
     "            \n",
     "            # This models equivalent of fit/predict\n",
     "            response = client.recognize(config, audio)\n",
     "            \n",
     "            # build dictionary -> dataframe\n",
-    "            print(response.results)\n",
+    "#             print(response.results)\n",
     "            for result in response.results:\n",
     "                d = {}\n",
     "                d['transcript'] = result.alternatives[0].transcript\n",
@@ -521,148 +521,6 @@
    "source": [
     "transcription_df = transcribe('./Datasets/sample_audio/', './Datasets/sample_transcript/', 'full_sample_transcript.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Load in audio file\n",
-    "# segment = AudioSegment.from_wav('./Datasets/sample_audio2/sample12.wav')\n",
-    "\n",
-    "# # loud\n",
-    "# response.results\n",
-    "\n",
-    "# # Make it louder\n",
-    "# louder_segment = segment +10\n",
-    "# louder_segment.export(f\"./Datasets/TEST_samples/sample12loud.wav\", format = \"wav\")\n",
-    "\n",
-    "# #\n",
-    "# compressed_audio = segment.compress_dynamic_range(threshold=segment.dBFS)\n",
-    "# compressed_audio.export(f\"./Datasets/TEST_samples/sample12compressdynamicrange.wav\", format = \"wav\")\n",
-    "\n",
-    "# removeddcoffset = segment.remove_dc_offset()\n",
-    "# removeddcoffset.export(f\"./Datasets/TEST_samples/sample12removeddcoffset.wav\", format = \"wav\")\n",
-    "\n",
-    "# normailzed = segment.normalize(headroom=0.5)\n",
-    "# normailzed\n",
-    "\n",
-    "# # clean_segment = AudioSegment.from_wav('./Datasets/sample_audio/sample5clean.wav')\n",
-    "# # clean_segment\n",
-    "\n",
-    "# code for single audio file\n",
-    "\n",
-    "# os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = '/Users/alex/ga-dsi-11/police-scanner-speech-to-text-c09b11750e4e.json'\n",
-    "# client = speech.SpeechClient()\n",
-    "\n",
-    "# with io.open('./Datasets/sample_audio2/sample12.wav', 'rb') as audio_file:\n",
-    "#     content = audio_file.read()\n",
-    "#     audio = speech.types.RecognitionAudio(content=content)\n",
-    "\n",
-    "# config = speech.types.RecognitionConfig(\n",
-    "#     encoding=enums.RecognitionConfig.AudioEncoding.LINEAR16,\n",
-    "#     sample_rate_hertz=22050,\n",
-    "#     language_code='en-US',\n",
-    "#     audio_channel_count=1,\n",
-    "#     enable_separate_recognition_per_channel = True,\n",
-    "#     use_enhanced = True,\n",
-    "#     model = 'phone_call',\n",
-    "#     speech_contexts= [{'boost': 20.0}]\n",
-    "# )\n",
-    "\n",
-    "# response = client.recognize(config, audio)\n",
-    "# for result in response.results:\n",
-    "#     print(result.alternatives[0].transcript)\n",
-    "#     print(result.alternatives[0].confidence)\n",
-    "\n",
-    "# df = pd.DataFrame()\n",
-    "\n",
-    "# d = {}\n",
-    "# d['transcript'] = result.alternatives[0].transcript\n",
-    "# d['confidence_interval'] = result.alternatives[0].confidence\n",
-    "# d['file_name'] = \"TESTESTTEST\"\n",
-    "\n",
-    "# df.append(d, ignore_index=True)\n",
-    "\n",
-    "# os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = '/Users/alex/ga-dsi-11/police-scanner-speech-to-text-c09b11750e4e.json'\n",
-    "# client = speech.SpeechClient()\n",
-    "\n",
-    "\n",
-    "# with io.open('./Datasets/TEST_samples/sample1.wav', 'rb') as audio_file:\n",
-    "#     content = audio_file.read()\n",
-    "#     audio = speech.types.RecognitionAudio(content=content)\n",
-    "\n",
-    "# config = speech.types.RecognitionConfig(\n",
-    "#     encoding=enums.RecognitionConfig.AudioEncoding.LINEAR16,\n",
-    "#     sample_rate_hertz=22050,\n",
-    "#     language_code='en-US',\n",
-    "#     audio_channel_count=1,\n",
-    "#     enable_separate_recognition_per_channel = True,\n",
-    "#     use_enhanced = True,\n",
-    "#     model = 'phone_call',\n",
-    "#     speech_contexts= [{'boost': 20.0}]\n",
-    "# )\n",
-    "\n",
-    "# response = client.recognize(config, audio)\n",
-    "# # for result in response.results:\n",
-    "# print(result.alternatives[0].transcript)\n",
-    "# print(result.alternatives[0].confidence)\n",
-    "# #     if len(result.alternatives[0].transcript) > 0:\n",
-    "# d = {}\n",
-    "# d['transcript'] = result.alternatives[0].transcript\n",
-    "# d['confidence_interval'] = result.alternatives[0].confidence\n",
-    "# d['file_name'] = \"i\"\n",
-    "# print(d)\n",
-    "# df = df.append(d, ignore_index=True)\n",
-    "# # for result in response.results:\n",
-    "# #     print(result.alternatives[0].transcript)\n",
-    "# #     print(result.alternatives[0].confidence)\n",
-    "\n",
-    "# # df = pd.DataFrame()\n",
-    "\n",
-    "# # d = {}\n",
-    "# # d['transcript'] = result.alternatives[0].transcript\n",
-    "# # d['confidence_interval'] = result.alternatives[0].confidence\n",
-    "# # d['file_name'] = \"TESTESTTEST\"\n",
-    "\n",
-    "# # df.append(d, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
