hopfully added some good audio

--- a/03_transcribe_audio.ipynb
+++ b/03_transcribe_audio.ipynb
@@ -86,8 +86,7 @@
     "                enable_separate_recognition_per_channel = True,\n",
     "                use_enhanced = True,\n",
     "                model = 'phone_call',\n",
-    "                speech_contexts = [{\n",
-    "                                    'boost': 20.0}])\n",
+    "                speech_contexts = [{'boost': 20.0}])\n",
     "            \n",
     "            # This models equivalent of fit/predict\n",
     "            response = client.recognize(config, audio)\n",
@@ -168,7 +167,7 @@
    ],
    "source": [
     "transcription_df = transcribe('./Datasets/sample_audio/QUICKTEST/',   # Indivitual INPUT PATH\n",
-    "                              './Datasets/sample_transcript/ALEX', # Indivitual INPUT PATH\n",
+    "                              './Datasets/sample_transcript/ALEX', # Indivitual OUTPUT PATH\n",
     "                              'ALEX_sample_transcript_QUICKTEST.csv', # Indivitual transcription csv name\n",
     "                              './Datasets/cambridge.csv'\n",
     "                             )\n",
