--- a/03_transcribe_audio.ipynb
+++ b/03_transcribe_audio.ipynb
@@ -86,7 +86,8 @@
     "                enable_separate_recognition_per_channel = True,\n",
     "                use_enhanced = True,\n",
     "                model = 'phone_call',\n",
-    "                speech_contexts = [{'boost': 20.0}])\n",
+    "                speech_contexts = [{'phrases': street_list,\n",
+    "                                    'boost': 20.0}])\n",
     "            \n",
     "            # This models equivalent of fit/predict\n",
     "            response = client.recognize(config, audio)\n",
