--- a/CODE/03_audio_cleaning_functions.ipynb
+++ b/CODE/03_audio_cleaning_functions.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSI BOS 11 (May 2020) Project 5\n",
+    "\n",
+    "Alex Golden, Jungmoon Ham, Luke Podsiadlo, Zach Tretter\n",
+    "\n",
+    "Workbook 3 - Audio Cleaning\n",
+    "\n",
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean Audio Files for Improved Transcription \n",
+    "\n",
+    "Relevance to Problem Statement : Transcription is the crucial step between aquiring data and having usable data.  Any steps we can make, especially given the audio quality of the subject matter, to improve the accuracy will improve later extraction of location and situational information.\n",
+    "\n",
+    "\n",
+    "#### Required Libraries/Packages\n",
+    "\n",
+    "1. [requests](https://github.com/psf/requests)\n",
+    "\n",
+    "2. [boto3](https://github.com/boto/boto3)\n",
+    "\n",
+    "3. time\n",
+    "\n",
+    "#### Workflow Steps\n",
+    "\n",
+    "0. Prework:\n",
+    "    - Set up an AWS account & instantiate an S3 sever with proper permissions on BOTH the bucket AND the account for which the AWS_KEY and AWS_SECRET are linked.  [AWS Instructions](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html) [Helpful Medium Article](https://medium.com/@aidan.hallett/securing-aws-s3-uploads-using-presigned-urls-aa821c13ae8d)\n",
+    "    - Set up an account on [Dolby.io](Dolby.io).  Comes with 2000 free minutes of processing time. \n",
+    "\n",
+    "1. Establish AWS S3 input and output locations\n",
+    "\n",
+    "2. Set cleaning parameters (defaults are established so only any deviations need to be set. More info can be located [here](https://dolby.io/developers/media-processing/tutorials/improving-audio-quality)\n",
+    "\n",
+    "3. Run the 'enhance_multiple_files' function to clean audio files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -19,14 +62,9 @@
    "outputs": [],
    "source": [
     "# Keys\n",
-    "\n",
-    "# dolby_api = '[YOUR DOLBY API KEY HERE]'\n",
-    "# aws_key = '[YOUR AWS KEY HERE]'\n",
-    "# aws_secret = '[YOUR AWS SECRET KEY HERE]'\n",
-    "\n",
-    "dolby_api = 'JLfteQ1mM09iP0PTXUSvOFdXD0AwCVrt'\n",
-    "aws_key = 'AKIAZIBCQGJS46JDS67D'\n",
-    "aws_secret = 'SZygcrxetalfLPbV/1mQh8USPaOhZxNDVqhumlRF'"
+    "dolby_api = '[YOUR DOLBY API KEY HERE]'\n",
+    "aws_key = '[YOUR AWS KEY HERE]'\n",
+    "aws_secret = '[YOUR AWS SECRET KEY HERE]'"
    ]
   },
   {
@@ -35,6 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creates our input presigned url\n",
     "def create_input_s3_presigned_url(aws_key = '', \n",
     "                                  aws_secret = '',\n",
     "                                  bucket_name = '',\n",
@@ -50,7 +89,7 @@
     "                                                               'Key': input_file})\n",
     "    return aws_input_url\n",
     "\n",
-    "\n",
+    "# Creates our output presigned url\n",
     "def create_output_s3_presigned_url(aws_key = '', \n",
     "                                   aws_secret = '',\n",
     "                                   bucket_name = '',\n",
@@ -67,6 +106,7 @@
     "                                                            'Key': output_path + output_file})\n",
     "    return aws_output_url\n",
     "\n",
+    "# Creates a list of our input files\n",
     "def get_file_keys(\n",
     "    aws_key = '',\n",
     "    aws_secret = '',\n",
@@ -93,19 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_file_keys(aws_key=aws_key, \n",
-    "              aws_secret=aws_secret, \n",
-    "              bucket_name= 'project-5-audio-files', \n",
-    "              bucket_path= 'test-raw/', \n",
-    "              file_type='.wav')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# creates dicitonary of tuning parameters\n",
     "def build_enhancement_json(user_params_dict):\n",
     "    \n",
     "    params_dict = {\n",
@@ -159,23 +187,6 @@
     "    }\n",
     "           }\n",
     "    return json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict1 = {\n",
-    "    \"arg1\": 1,\n",
-    "    \"arg2\": 2,\n",
-    "    \"arg3\": 3\n",
-    "}\n",
-    "\n",
-    "dict1.update({'arg3': \"dog\"})\n",
-    "\n",
-    "dict1['arg3']"
    ]
   },
   {
@@ -248,6 +259,7 @@
     "    ** For information on setting up s3 permission please see the following resources: \n",
     "    ** https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html\n",
     "    ** https://medium.com/@aidan.hallett/securing-aws-s3-uploads-using-presigned-urls-aa821c13ae8d\n",
+    "    ** additonal information can be found at dolby.io\n",
     "    \n",
     "    dolby_api = REQUIRED\n",
     "    \n",
@@ -317,29 +329,20 @@
    },
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    'noise_enable': False\n",
-    "}\n",
+    "params = {}\n",
     "\n",
     "enhance_multiple_files(\n",
     "    dolby_api = dolby_api,\n",
     "    aws_key = aws_key,\n",
     "    aws_secret = aws_secret,\n",
-    "    bucket_name = 'project-5-audio-files',\n",
-    "    input_bucket_path = 'test-raw/',\n",
-    "    output_path = 'test-enhanced/',\n",
-    "    output_prefix = 'enhanced-',\n",
+    "    bucket_name = '[YOUR BUCKET NAME HERE]',\n",
+    "    input_bucket_path = '[NAME OF INPUT DIRECTORY WITHIN BUCKET HERE]',\n",
+    "    output_path = '[NAME OF OUTPUT DIRECTORY]',\n",
+    "    output_prefix = '[STRING TO PREFIX OUTPUT FILES WITH]',\n",
     "    user_params_dict = params,\n",
     "    file_type = '.wav'\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
