--- a/CODE/03_audio_cleaning_functions.ipynb
+++ b/CODE/03_audio_cleaning_functions.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "2. Set cleaning parameters (defaults are established so only any deviations need to be set. More info can be located [here](https://dolby.io/developers/media-processing/tutorials/improving-audio-quality)\n",
     "\n",
-    "3. Run the 'enhance_multiple_files' function to clean audio files."
+    "3. Run the `enhance_multiple_files` function to clean audio files."
    ]
   },
   {
