changed code file order

--- a/CODE/02_audio_cleaning_functions_FINAL.ipynb
+++ b/CODE/02_audio_cleaning_functions_FINAL.ipynb
@@ -40,7 +40,11 @@
     "\n",
     "2. Set cleaning parameters (defaults are established so only any deviations need to be set. More info can be located [here](https://dolby.io/developers/media-processing/tutorials/improving-audio-quality)\n",
     "\n",
-    "3. Run the `enhance_multiple_files` function to clean audio files."
+    "3. Run the `enhance_multiple_files` function to clean audio files.\n",
+    "\n",
+    "#### Github\n",
+    "\n",
+    "- This notebook contains functionality that we believe can be useful to the community. We have uploaded a version of it to public Github and will (time permiting) continue to work on it.  [Dolpy](https://github.com/codylocks/dolpy)"
    ]
   },
   {
